[project]
authors = [{name = "sophia", email = "scastellarin@quansight.com"}]
description = "Add a short description here"
name = "canopy"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["requests>=2.32.3,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
canopy = { path = ".", editable = true }

[project.scripts]
canopy = "canopy.main:sync"

[tool.pixi.tasks]
